fixed small error and tested demo process